$Id$

0.0.5 - SOMEDAY - Diego Iastrubni <diegoiast@gmail.com>
 * code refactoring: qmdiClient does not maintain a filename, instead it's using
   a virtual method: qmdiClient::mdiClientFileName()

0.0.4 - 29 Jun 2007 - Diego Iastrubni <elcuco@kde.org>
 * Documentation re-created using doxygen 1.4.7
 * code refactoring: qmdiClient - qmdiServer is now a public member
 * new feature: qmdiActionGroup - added support for submenus
 * new feature: qmdiActionGroup - added support for adding QActionGroup
 * new feature: qmdiActionGroup - merge points are computed at run time from list of added groups
 * code refactoring: qmdiHost - updateGUI can has been updated, see documentation
 * code refactoring: qmdiServer - a lot of functions moved from qmdiTabWidget
 * code refactoring: qmdiTabWidget contains less implementation details (see qmdiServer)
 * code refactoring: qmdiTabBar has been removed, qmdiTabWidget uses an event filter now
 * new demo: plugin demo is working now, soon to be ported to the main library

0.0.3  - 7 Oct 2006 - Diego Iastrubni <elcuco@kde.org>
 * new feature: QWorkspace children are also checked for qmdiClient interface,
   feature coded by Nox PasNox <pasnox@gmail.com>
 * new feature: merge point for qmdiActionGroup
 * new class: qmdiWorkspace, a qmdiServer based on QWorkspace
 * code refactoring: qmdiClient does not contain QObject *self any more
 * code refactoring: qmdiServer now contains a pointer to the host (was in qmdiTabWidget)
 * code refactoring: demos should be easier to read, and hopefully maintain
 * removed most internal frames from all widgets in demos, the demos will look nicer
 * all the documentation has been spell checked

0.0.2  - 11 Jul 06 - Diego Iastrubni <elcuco@kde.org>
 * many documentation updates
 * compilation problems on mingw should be fixed

0.0.2-pre  - 19 Jul 06 - Diego Iastrubni <elcuco@kde.org>
 * fixed many flickering issues, now it only flickers when you add QWidgets to qmdiActionGroup